// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertCard should match snapshot 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0);
    -moz-transform: rotate(0);
    -ms-transform: rotate(0);
    transform: rotate(0);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-1 {
  0% {
    stroke-dashoffset: 600;
  }

  100% {
    stroke-dashoffset: 0;
  }
}

.panther-36 {
  background-color: #1d2a3f;
  border-radius: 4px;
  padding: 20px;
}

.panther-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  height: 100%;
}

.panther-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
}

.panther-1 {
  -webkit-transition: color 0.1s ease-out;
  transition: color 0.1s ease-out;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #7fd3ff;
  cursor: pointer;
}

.panther-1:hover {
  color: #ace2ff;
}

.panther-1:focus {
  color: #ace2ff;
}

.panther-1:active,
.panther-1[data-active=true] {
  color: #11a5f3;
}

.panther-0 {
  font-weight: 500;
}

.panther-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.panther-33>*:not(:last-child) {
  margin-right: 32px;
}

.panther-5 {
  margin-top: 16px;
}

.panther-4 {
  font-size: 0.875rem;
  opacity: 1;
}



.panther-3>span {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.panther-2 {
  width: auto;
  outline: none;
  padding-left: 20px;
  padding-right: 20px;
  height: 32px;
  font-size: 0.813rem;
  -webkit-transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  border: 1px solid;
  border-color: #3e516b;
  background-color: #3e516b;
  cursor: pointer;
  color: #f6f6f6;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.panther-2:hover {
  background-color: #485b75;
  border-color: #485b75;
}

.panther-2:focus {
  background-color: #485b75;
  border-color: #93a6c0;
}

.panther-2:active,
.panther-2[data-active=true] {
  background-color: #344761;
  border-color: #344761;
}

.panther-6 {
  color: #bdbdbd;
  font-size: 0.563rem;
  margin-bottom: 1px;
  font-weight: 500;
}

.panther-9 {
  height: 24px;
}

.panther-8 {
  display: inline-block;
  vertical-align: sub;
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
  width: 18px;
  height: 18px;
}

.panther-7 {
  stroke-dashoffset: 600;
  stroke-dasharray: 300;
  stroke-width: 13;
  stroke-miterlimit: 10;
  stroke-linecap: round;
  -webkit-animation: animation-1 1.6s cubic-bezier(0.4, 0.15, 0.6, 0.85) infinite;
  animation: animation-1 1.6s cubic-bezier(0.4, 0.15, 0.6, 0.85) infinite;
  stroke: currentColor;
  fill: transparent;
}

.panther-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
}

.panther-16>*:not(:last-child) {
  margin-right: 24px;
}

.panther-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.panther-15>*:not(:last-child) {
  margin-right: 8px;
}

.panther-13 {
  width: 12px;
  height: 12px;
  background-color: hsl(353, 43%, 63%);
  border-radius: 99999px;
}

.panther-14 {
  font-size: 0.75rem;
}

.panther-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-left: auto;
  margin-right: 0;
}

.panther-32>*:not(:last-child) {
  margin-right: 8px;
}

.panther-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  width: -webkit-fit-content;
  width: -moz-content;
  width: fit-content;
  min-width: 85px;
  text-align: center;
  font-weight: 700;
  border-radius: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.75rem;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  border: 1px solid;
  border-color: #ffa500;
  background-color: transparent;
}

.panther-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.panther-31>*:not(:last-child) {
  margin-right: 4px;
}

.panther-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 85px;
}

.panther-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  width: -webkit-fit-content;
  width: -moz-content;
  width: fit-content;
  min-width: 85px;
  text-align: center;
  font-weight: 700;
  border-radius: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.75rem;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #6e3078;
}

.panther-30 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.panther-29 {
  outline: none;
  line-height: 1;
  height: 24px;
  width: 24px;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  border-radius: 99999px;
  border: 1px solid;
  border-color: #3e516b;
  background-color: transparent;
  cursor: pointer;
  color: #f6f6f6;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.panther-29:hover {
  background-color: #465973;
  border-color: #465973;
}

.panther-29:focus {
  background-color: #465973;
  border-color: #93a6c0;
}

.panther-29:active,
.panther-29[data-active=true] {
  background-color: #253852;
  border-color: #253852;
}

.panther-28 {
  display: inline-block;
  vertical-align: sub;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  color: currentColor;
}

<div>
  <header
    id="main-header"
  />
  <section
    class="panther-36"
  >
    <div
      class="panther-35"
    >
      <div
        class="panther-34"
      >
        <a
          aria-label="Link to Alert"
          class="panther-1"
          href="/log-analysis/alerts/f67b8f04-5fac-404a-93a4-38db29f258ba/"
        >
          <h4
            class="panther-0"
          >
            indexing
          </h4>
        </a>
        <div
          class="panther-33"
        >
          <dl
            class="panther-5"
          >
            <dd
              aria-labelledby="link-to-rule"
              class="panther-4"
            >
              <a
                class="panther-3"
                href="/log-analysis/rules/6eb9c948-5a13-4955-bd91-b98801b55bed/"
              >
                <span
                  aria-label="Link to Rule"
                  class="panther-2"
                  type="button"
                >
                  View Rule
                </span>
              </a>
            </dd>
          </dl>
          <dl
            class="panther-5"
          >
            <dt
              aria-labelledby="destinationsobject-object"
              class="panther-6"
            >
              Destinations
            </dt>
            <dd
              aria-labelledby="destinationsobject-object"
              class="panther-4"
            >
              <div
                class="panther-9"
              >
                <svg
                  aria-label="Loading..."
                  class="panther-8"
                  viewBox="0 0 150 150"
                >
                  <circle
                    class="panther-7"
                    color="current"
                    cx="75"
                    cy="75"
                    r="60"
                  />
                </svg>
              </div>
            </dd>
          </dl>
          <dl
            class="panther-5"
          >
            <dt
              aria-labelledby="log-typesobject-object"
              class="panther-6"
            >
              Log Types
            </dt>
            <dd
              aria-labelledby="log-typesobject-object"
              class="panther-4"
            >
              <div
                class="panther-16"
              >
                <div
                  class="panther-15"
                >
                  <span
                    class="panther-13"
                  />
                  <span
                    class="panther-14"
                  >
                    Costa Rica
                  </span>
                </div>
              </div>
            </dd>
          </dl>
          <dl
            class="panther-5"
          >
            <dt
              aria-labelledby="events670"
              class="panther-6"
            >
              Events
            </dt>
            <dd
              aria-labelledby="events670"
              class="panther-4"
            >
              670
            </dd>
          </dl>
          <dl
            class="panther-5"
          >
            <dt
              aria-labelledby="time-created2020-08-08-1515-gmt3"
              class="panther-6"
            >
              Time Created
            </dt>
            <dd
              aria-labelledby="time-created2020-08-08-1515-gmt3"
              class="panther-4"
            >
              2020-08-08 15:15 GMT+3
            </dd>
          </dl>
          <div
            class="panther-32"
          >
            <div
              aria-atomic="true"
              class="panther-25"
              role="status"
            >
              MEDIUM
            </div>
            <div
              class="panther-31"
            >
              <div
                class="panther-27"
              >
                <div
                  aria-atomic="true"
                  class="panther-26"
                  role="status"
                >
                  TRIAGED
                </div>
              </div>
              <div
                aria-controls="menu--1"
                aria-haspopup="true"
                class="panther-30"
                data-reach-menu-button=""
                id="menu-button--menu--1"
                type="button"
              >
                <button
                  aria-label="Change Alert Status"
                  aria-pressed="false"
                  class="panther-29"
                  type="button"
                >
                  <svg
                    class="panther-28"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10L12 15L17 10H7Z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <footer
    id="footer"
  />
</div>
`;

exports[`AlertCard should not display link to Rule 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0);
    -moz-transform: rotate(0);
    -ms-transform: rotate(0);
    transform: rotate(0);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-1 {
  0% {
    stroke-dashoffset: 600;
  }

  100% {
    stroke-dashoffset: 0;
  }
}

.panther-32 {
  background-color: #1d2a3f;
  border-radius: 4px;
  padding: 20px;
}

.panther-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  height: 100%;
}

.panther-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
}

.panther-1 {
  -webkit-transition: color 0.1s ease-out;
  transition: color 0.1s ease-out;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #7fd3ff;
  cursor: pointer;
}

.panther-1:hover {
  color: #ace2ff;
}

.panther-1:focus {
  color: #ace2ff;
}

.panther-1:active,
.panther-1[data-active=true] {
  color: #11a5f3;
}

.panther-0 {
  font-weight: 500;
}

.panther-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.panther-29>*:not(:last-child) {
  margin-right: 32px;
}

.panther-7 {
  margin-top: 16px;
}

.panther-6 {
  font-size: 0.875rem;
  opacity: 1;
}

.panther-2 {
  color: #bdbdbd;
  font-size: 0.563rem;
  margin-bottom: 1px;
  font-weight: 500;
}

.panther-5 {
  height: 24px;
}

.panther-4 {
  display: inline-block;
  vertical-align: sub;
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
  width: 18px;
  height: 18px;
}

.panther-3 {
  stroke-dashoffset: 600;
  stroke-dasharray: 300;
  stroke-width: 13;
  stroke-miterlimit: 10;
  stroke-linecap: round;
  -webkit-animation: animation-1 1.6s cubic-bezier(0.4, 0.15, 0.6, 0.85) infinite;
  animation: animation-1 1.6s cubic-bezier(0.4, 0.15, 0.6, 0.85) infinite;
  stroke: currentColor;
  fill: transparent;
}

.panther-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
}

.panther-12>*:not(:last-child) {
  margin-right: 24px;
}

.panther-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.panther-11>*:not(:last-child) {
  margin-right: 8px;
}

.panther-9 {
  width: 12px;
  height: 12px;
  background-color: hsl(353, 43%, 63%);
  border-radius: 99999px;
}

.panther-10 {
  font-size: 0.75rem;
}

.panther-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-left: auto;
  margin-right: 0;
}

.panther-28>*:not(:last-child) {
  margin-right: 8px;
}

.panther-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  width: -webkit-fit-content;
  width: -moz-content;
  width: fit-content;
  min-width: 85px;
  text-align: center;
  font-weight: 700;
  border-radius: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.75rem;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  border: 1px solid;
  border-color: #ffa500;
  background-color: transparent;
}

.panther-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.panther-27>*:not(:last-child) {
  margin-right: 4px;
}

.panther-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 85px;
}

.panther-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  width: -webkit-fit-content;
  width: -moz-content;
  width: fit-content;
  min-width: 85px;
  text-align: center;
  font-weight: 700;
  border-radius: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.75rem;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #6e3078;
}

.panther-26 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.panther-25 {
  outline: none;
  line-height: 1;
  height: 24px;
  width: 24px;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  border-radius: 99999px;
  border: 1px solid;
  border-color: #3e516b;
  background-color: transparent;
  cursor: pointer;
  color: #f6f6f6;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.panther-25:hover {
  background-color: #465973;
  border-color: #465973;
}

.panther-25:focus {
  background-color: #465973;
  border-color: #93a6c0;
}

.panther-25:active,
.panther-25[data-active=true] {
  background-color: #253852;
  border-color: #253852;
}

.panther-24 {
  display: inline-block;
  vertical-align: sub;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  color: currentColor;
}

<div>
  <header
    id="main-header"
  />
  <section
    class="panther-32"
  >
    <div
      class="panther-31"
    >
      <div
        class="panther-30"
      >
        <a
          aria-label="Link to Alert"
          class="panther-1"
          href="/log-analysis/alerts/f67b8f04-5fac-404a-93a4-38db29f258ba/"
        >
          <h4
            class="panther-0"
          >
            indexing
          </h4>
        </a>
        <div
          class="panther-29"
        >
          <dl
            class="panther-7"
          >
            <dt
              aria-labelledby="destinationsobject-object"
              class="panther-2"
            >
              Destinations
            </dt>
            <dd
              aria-labelledby="destinationsobject-object"
              class="panther-6"
            >
              <div
                class="panther-5"
              >
                <svg
                  aria-label="Loading..."
                  class="panther-4"
                  viewBox="0 0 150 150"
                >
                  <circle
                    class="panther-3"
                    color="current"
                    cx="75"
                    cy="75"
                    r="60"
                  />
                </svg>
              </div>
            </dd>
          </dl>
          <dl
            class="panther-7"
          >
            <dt
              aria-labelledby="log-typesobject-object"
              class="panther-2"
            >
              Log Types
            </dt>
            <dd
              aria-labelledby="log-typesobject-object"
              class="panther-6"
            >
              <div
                class="panther-12"
              >
                <div
                  class="panther-11"
                >
                  <span
                    class="panther-9"
                  />
                  <span
                    class="panther-10"
                  >
                    Costa Rica
                  </span>
                </div>
              </div>
            </dd>
          </dl>
          <dl
            class="panther-7"
          >
            <dt
              aria-labelledby="events670"
              class="panther-2"
            >
              Events
            </dt>
            <dd
              aria-labelledby="events670"
              class="panther-6"
            >
              670
            </dd>
          </dl>
          <dl
            class="panther-7"
          >
            <dt
              aria-labelledby="time-created2020-08-08-1515-gmt3"
              class="panther-2"
            >
              Time Created
            </dt>
            <dd
              aria-labelledby="time-created2020-08-08-1515-gmt3"
              class="panther-6"
            >
              2020-08-08 15:15 GMT+3
            </dd>
          </dl>
          <div
            class="panther-28"
          >
            <div
              aria-atomic="true"
              class="panther-21"
              role="status"
            >
              MEDIUM
            </div>
            <div
              class="panther-27"
            >
              <div
                class="panther-23"
              >
                <div
                  aria-atomic="true"
                  class="panther-22"
                  role="status"
                >
                  TRIAGED
                </div>
              </div>
              <div
                aria-controls="menu--11"
                aria-haspopup="true"
                class="panther-26"
                data-reach-menu-button=""
                id="menu-button--menu--11"
                type="button"
              >
                <button
                  aria-label="Change Alert Status"
                  aria-pressed="false"
                  class="panther-25"
                  type="button"
                >
                  <svg
                    class="panther-24"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10L12 15L17 10H7Z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <footer
    id="footer"
  />
</div>
`;

exports[`AlertCard should render alert destinations logos 1`] = `
.panther-35 {
  background-color: #1d2a3f;
  border-radius: 4px;
  padding: 20px;
}

.panther-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  height: 100%;
}

.panther-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
}

.panther-1 {
  -webkit-transition: color 0.1s ease-out;
  transition: color 0.1s ease-out;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #7fd3ff;
  cursor: pointer;
}

.panther-1:hover {
  color: #ace2ff;
}

.panther-1:focus {
  color: #ace2ff;
}

.panther-1:active,
.panther-1[data-active=true] {
  color: #11a5f3;
}

.panther-0 {
  font-weight: 500;
}

.panther-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.panther-32>*:not(:last-child) {
  margin-right: 32px;
}

.panther-5 {
  margin-top: 16px;
}

.panther-4 {
  font-size: 0.875rem;
  opacity: 1;
}



.panther-3>span {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.panther-2 {
  width: auto;
  outline: none;
  padding-left: 20px;
  padding-right: 20px;
  height: 32px;
  font-size: 0.813rem;
  -webkit-transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  border: 1px solid;
  border-color: #3e516b;
  background-color: #3e516b;
  cursor: pointer;
  color: #f6f6f6;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.panther-2:hover {
  background-color: #485b75;
  border-color: #485b75;
}

.panther-2:focus {
  background-color: #485b75;
  border-color: #93a6c0;
}

.panther-2:active,
.panther-2[data-active=true] {
  background-color: #344761;
  border-color: #344761;
}

.panther-6 {
  color: #bdbdbd;
  font-size: 0.563rem;
  margin-bottom: 1px;
  font-weight: 500;
}

.panther-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
}

.panther-15>*:not(:last-child) {
  margin-right: 24px;
}

.panther-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.panther-14>*:not(:last-child) {
  margin-right: 8px;
}

.panther-12 {
  width: 12px;
  height: 12px;
  background-color: hsl(353, 43%, 63%);
  border-radius: 99999px;
}

.panther-13 {
  font-size: 0.75rem;
}

.panther-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-left: auto;
  margin-right: 0;
}

.panther-31>*:not(:last-child) {
  margin-right: 8px;
}

.panther-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  width: -webkit-fit-content;
  width: -moz-content;
  width: fit-content;
  min-width: 85px;
  text-align: center;
  font-weight: 700;
  border-radius: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.75rem;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  border: 1px solid;
  border-color: #ffa500;
  background-color: transparent;
}

.panther-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.panther-30>*:not(:last-child) {
  margin-right: 4px;
}

.panther-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 85px;
}

.panther-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  width: -webkit-fit-content;
  width: -moz-content;
  width: fit-content;
  min-width: 85px;
  text-align: center;
  font-weight: 700;
  border-radius: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.75rem;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #6e3078;
}

.panther-29 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.panther-28 {
  outline: none;
  line-height: 1;
  height: 24px;
  width: 24px;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  border-radius: 99999px;
  border: 1px solid;
  border-color: #3e516b;
  background-color: transparent;
  cursor: pointer;
  color: #f6f6f6;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.panther-28:hover {
  background-color: #465973;
  border-color: #465973;
}

.panther-28:focus {
  background-color: #465973;
  border-color: #93a6c0;
}

.panther-28:active,
.panther-28[data-active=true] {
  background-color: #253852;
  border-color: #253852;
}

.panther-27 {
  display: inline-block;
  vertical-align: sub;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.panther-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
}

.panther-8>*:not(:last-child) {
  margin-right: 8px;
}

.panther-7 {
  max-width: 100%;
  margin-right: 8px;
}

<div>
  <header
    id="main-header"
  />
  <section
    class="panther-35"
  >
    <div
      class="panther-34"
    >
      <div
        class="panther-33"
      >
        <a
          aria-label="Link to Alert"
          class="panther-1"
          href="/log-analysis/alerts/f67b8f04-5fac-404a-93a4-38db29f258ba/"
        >
          <h4
            class="panther-0"
          >
            indexing
          </h4>
        </a>
        <div
          class="panther-32"
        >
          <dl
            class="panther-5"
          >
            <dd
              aria-labelledby="link-to-rule"
              class="panther-4"
            >
              <a
                class="panther-3"
                href="/log-analysis/rules/6eb9c948-5a13-4955-bd91-b98801b55bed/"
              >
                <span
                  aria-label="Link to Rule"
                  class="panther-2"
                  type="button"
                >
                  View Rule
                </span>
              </a>
            </dd>
          </dl>
          <dl
            class="panther-5"
          >
            <dt
              aria-labelledby="destinationsobject-object"
              class="panther-6"
            >
              Destinations
            </dt>
            <dd
              aria-labelledby="destinationsobject-object"
              class="panther-4"
            >
              <div
                class="panther-8"
              >
                <img
                  alt="slack logo"
                  class="panther-7"
                  height="24"
                  src="test-file-stub"
                  width="24"
                />
              </div>
            </dd>
          </dl>
          <dl
            class="panther-5"
          >
            <dt
              aria-labelledby="log-typesobject-object"
              class="panther-6"
            >
              Log Types
            </dt>
            <dd
              aria-labelledby="log-typesobject-object"
              class="panther-4"
            >
              <div
                class="panther-15"
              >
                <div
                  class="panther-14"
                >
                  <span
                    class="panther-12"
                  />
                  <span
                    class="panther-13"
                  >
                    Costa Rica
                  </span>
                </div>
              </div>
            </dd>
          </dl>
          <dl
            class="panther-5"
          >
            <dt
              aria-labelledby="events670"
              class="panther-6"
            >
              Events
            </dt>
            <dd
              aria-labelledby="events670"
              class="panther-4"
            >
              670
            </dd>
          </dl>
          <dl
            class="panther-5"
          >
            <dt
              aria-labelledby="time-created2020-08-08-1515-gmt3"
              class="panther-6"
            >
              Time Created
            </dt>
            <dd
              aria-labelledby="time-created2020-08-08-1515-gmt3"
              class="panther-4"
            >
              2020-08-08 15:15 GMT+3
            </dd>
          </dl>
          <div
            class="panther-31"
          >
            <div
              aria-atomic="true"
              class="panther-24"
              role="status"
            >
              MEDIUM
            </div>
            <div
              class="panther-30"
            >
              <div
                class="panther-26"
              >
                <div
                  aria-atomic="true"
                  class="panther-25"
                  role="status"
                >
                  TRIAGED
                </div>
              </div>
              <div
                aria-controls="menu--21"
                aria-haspopup="true"
                class="panther-29"
                data-reach-menu-button=""
                id="menu-button--menu--21"
                type="button"
              >
                <button
                  aria-label="Change Alert Status"
                  aria-pressed="false"
                  class="panther-28"
                  type="button"
                >
                  <svg
                    class="panther-27"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10L12 15L17 10H7Z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <footer
    id="footer"
  />
</div>
`;

exports[`AlertCard should render message that destination delivery is failing 1`] = `
.panther-38 {
  background-color: #1d2a3f;
  border-radius: 4px;
  padding: 20px;
}

.panther-37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  height: 100%;
}

.panther-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
}

.panther-1 {
  -webkit-transition: color 0.1s ease-out;
  transition: color 0.1s ease-out;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #7fd3ff;
  cursor: pointer;
}

.panther-1:hover {
  color: #ace2ff;
}

.panther-1:focus {
  color: #ace2ff;
}

.panther-1:active,
.panther-1[data-active=true] {
  color: #11a5f3;
}

.panther-0 {
  font-weight: 500;
}

.panther-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.panther-32>*:not(:last-child) {
  margin-right: 32px;
}

.panther-5 {
  margin-top: 16px;
}

.panther-4 {
  font-size: 0.875rem;
  opacity: 1;
}



.panther-3>span {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.panther-2 {
  width: auto;
  outline: none;
  padding-left: 20px;
  padding-right: 20px;
  height: 32px;
  font-size: 0.813rem;
  -webkit-transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  border: 1px solid;
  border-color: #3e516b;
  background-color: #3e516b;
  cursor: pointer;
  color: #f6f6f6;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.panther-2:hover {
  background-color: #485b75;
  border-color: #485b75;
}

.panther-2:focus {
  background-color: #485b75;
  border-color: #93a6c0;
}

.panther-2:active,
.panther-2[data-active=true] {
  background-color: #344761;
  border-color: #344761;
}

.panther-6 {
  color: #bdbdbd;
  font-size: 0.563rem;
  margin-bottom: 1px;
  font-weight: 500;
}

.panther-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
}

.panther-15>*:not(:last-child) {
  margin-right: 24px;
}

.panther-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.panther-14>*:not(:last-child) {
  margin-right: 8px;
}

.panther-12 {
  width: 12px;
  height: 12px;
  background-color: hsl(353, 43%, 63%);
  border-radius: 99999px;
}

.panther-13 {
  font-size: 0.75rem;
}

.panther-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-left: auto;
  margin-right: 0;
}

.panther-31>*:not(:last-child) {
  margin-right: 8px;
}

.panther-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  width: -webkit-fit-content;
  width: -moz-content;
  width: fit-content;
  min-width: 85px;
  text-align: center;
  font-weight: 700;
  border-radius: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.75rem;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  border: 1px solid;
  border-color: #ffa500;
  background-color: transparent;
}

.panther-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.panther-30>*:not(:last-child) {
  margin-right: 4px;
}

.panther-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 85px;
}

.panther-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  width: -webkit-fit-content;
  width: -moz-content;
  width: fit-content;
  min-width: 85px;
  text-align: center;
  font-weight: 700;
  border-radius: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.75rem;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #6e3078;
}

.panther-29 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.panther-28 {
  outline: none;
  line-height: 1;
  height: 24px;
  width: 24px;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  border-radius: 99999px;
  border: 1px solid;
  border-color: #3e516b;
  background-color: transparent;
  cursor: pointer;
  color: #f6f6f6;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.panther-28:hover {
  background-color: #465973;
  border-color: #465973;
}

.panther-28:focus {
  background-color: #465973;
  border-color: #93a6c0;
}

.panther-28:active,
.panther-28[data-active=true] {
  background-color: #253852;
  border-color: #253852;
}

.panther-27 {
  display: inline-block;
  vertical-align: sub;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.panther-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
}

.panther-8>*:not(:last-child) {
  margin-right: 8px;
}

.panther-7 {
  max-width: 100%;
  margin-right: 8px;
}

.panther-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
}

.panther-35>*:not(:last-child) {
  margin-right: 8px;
}

.panther-33 {
  display: inline-block;
  vertical-align: sub;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 20px;
  height: 20px;
  color: #d64242;
}

.panther-34 {
  font-size: 0.75rem;
  font-style: italic;
  color: #d64242;
}

<div>
  <header
    id="main-header"
  />
  <section
    class="panther-38"
  >
    <div
      class="panther-37"
    >
      <div
        class="panther-36"
      >
        <a
          aria-label="Link to Alert"
          class="panther-1"
          href="/log-analysis/alerts/f67b8f04-5fac-404a-93a4-38db29f258ba/"
        >
          <h4
            class="panther-0"
          >
            indexing
          </h4>
        </a>
        <div
          class="panther-32"
        >
          <dl
            class="panther-5"
          >
            <dd
              aria-labelledby="link-to-rule"
              class="panther-4"
            >
              <a
                class="panther-3"
                href="/log-analysis/rules/6eb9c948-5a13-4955-bd91-b98801b55bed/"
              >
                <span
                  aria-label="Link to Rule"
                  class="panther-2"
                  type="button"
                >
                  View Rule
                </span>
              </a>
            </dd>
          </dl>
          <dl
            class="panther-5"
          >
            <dt
              aria-labelledby="destinationsobject-object"
              class="panther-6"
            >
              Destinations
            </dt>
            <dd
              aria-labelledby="destinationsobject-object"
              class="panther-4"
            >
              <div
                class="panther-8"
              >
                <img
                  alt="slack logo"
                  class="panther-7"
                  height="24"
                  src="test-file-stub"
                  width="24"
                />
              </div>
            </dd>
          </dl>
          <dl
            class="panther-5"
          >
            <dt
              aria-labelledby="log-typesobject-object"
              class="panther-6"
            >
              Log Types
            </dt>
            <dd
              aria-labelledby="log-typesobject-object"
              class="panther-4"
            >
              <div
                class="panther-15"
              >
                <div
                  class="panther-14"
                >
                  <span
                    class="panther-12"
                  />
                  <span
                    class="panther-13"
                  >
                    Costa Rica
                  </span>
                </div>
              </div>
            </dd>
          </dl>
          <dl
            class="panther-5"
          >
            <dt
              aria-labelledby="events670"
              class="panther-6"
            >
              Events
            </dt>
            <dd
              aria-labelledby="events670"
              class="panther-4"
            >
              670
            </dd>
          </dl>
          <dl
            class="panther-5"
          >
            <dt
              aria-labelledby="time-created2020-08-08-1515-gmt3"
              class="panther-6"
            >
              Time Created
            </dt>
            <dd
              aria-labelledby="time-created2020-08-08-1515-gmt3"
              class="panther-4"
            >
              2020-08-08 15:15 GMT+3
            </dd>
          </dl>
          <div
            class="panther-31"
          >
            <div
              aria-atomic="true"
              class="panther-24"
              role="status"
            >
              MEDIUM
            </div>
            <div
              class="panther-30"
            >
              <div
                class="panther-26"
              >
                <div
                  aria-atomic="true"
                  class="panther-25"
                  role="status"
                >
                  TRIAGED
                </div>
              </div>
              <div
                aria-controls="menu--25"
                aria-haspopup="true"
                class="panther-29"
                data-reach-menu-button=""
                id="menu-button--menu--25"
                type="button"
              >
                <button
                  aria-label="Change Alert Status"
                  aria-pressed="false"
                  class="panther-28"
                  type="button"
                >
                  <svg
                    class="panther-27"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10L12 15L17 10H7Z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="Destination delivery failure"
          class="panther-35"
        >
          <svg
            class="panther-33"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2 C17.5228475,2 22,6.4771525 22,12 C22,17.5228475 17.5228475,22 12,22 C6.4771525,22 2,17.5228475 2,12 C2,6.4771525 6.4771525,2 12,2 Z M13,15.5 L11,15.5 L11,17.5 L13,17.5 L13,15.5 Z M13,7 L11,7 L11,14 L13,14 L13,7 Z"
            />
          </svg>
          <p
            class="panther-34"
          >
            There was an issue with the delivery of this alert to a selected destination. See specific Alert for details.
          </p>
        </div>
      </div>
    </div>
  </section>
  <footer
    id="footer"
  />
</div>
`;
